[gd_scene load_steps=7 format=3 uid="uid://dniry0r343es0"]

[ext_resource type="Theme" uid="uid://dna37blibu61" path="res://Themes/dark_default_theme.tres" id="1_dsxom"]
[ext_resource type="Script" path="res://Scripts/Assets.gd" id="2_27f4q"]
[ext_resource type="PackedScene" uid="uid://4w7aek11bxbq" path="res://Scenes/render.tscn" id="4_sa1rd"]

[sub_resource type="InputEventKey" id="InputEventKey_sqhhr"]
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_jqs3k"]
events = [SubResource("InputEventKey_sqhhr")]

[sub_resource type="LabelSettings" id="LabelSettings_ss86v"]
font_size = 8

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 814.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MainMenu"]
layout_mode = 2
theme = ExtResource("1_dsxom")

[node name="TabContainer" type="TabContainer" parent="MainMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 5.0
offset_right = -20.0
offset_bottom = -17.0
grow_horizontal = 2
tab_alignment = 1

[node name="Generation" type="Control" parent="MainMenu/Panel/TabContainer"]
custom_minimum_size = Vector2(0, 570)
layout_mode = 2
theme = ExtResource("1_dsxom")

[node name="GenerateButton" type="Button" parent="MainMenu/Panel/TabContainer/Generation"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Generate a new instance based on set parameters."
theme = ExtResource("1_dsxom")
shortcut = SubResource("Shortcut_jqs3k")
text = "Generate"

[node name="GridSize" type="Label" parent="MainMenu/Panel/TabContainer/Generation"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.047
offset_left = 120.0
offset_right = -111.0
offset_bottom = -1.965
grow_horizontal = 2
text = "Grid size
"

[node name="GridSizeX" type="LineEdit" parent="MainMenu/Panel/TabContainer/Generation"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.045
anchor_right = 1.0
anchor_bottom = 0.097
offset_left = 10.0
offset_top = 3.225
offset_right = -198.0
offset_bottom = 3.285
placeholder_text = "X"
alignment = 1

[node name="GridSizeY" type="LineEdit" parent="MainMenu/Panel/TabContainer/Generation"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.097
offset_left = 104.0
offset_top = 0.25
offset_right = -104.0
offset_bottom = 3.285
placeholder_text = "Y"
alignment = 1

[node name="GridSizeZ" type="LineEdit" parent="MainMenu/Panel/TabContainer/Generation"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.097
offset_left = 198.0
offset_top = 0.25
offset_right = -10.0
offset_bottom = 3.285
placeholder_text = "Z"
alignment = 1

[node name="Assets" type="Control" parent="MainMenu/Panel/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 570)
layout_mode = 2
theme = ExtResource("1_dsxom")
script = ExtResource("2_27f4q")

[node name="ItemList" type="ItemList" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.45
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dsxom")
same_column_width = true

[node name="SaveButton" type="Button" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Save"

[node name="AddButton" type="Button" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.52
anchor_right = 1.0
anchor_bottom = 0.53
offset_left = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_dsxom")
text = "Import"

[node name="NameEdit" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.53
anchor_right = 1.0
anchor_bottom = 0.59
offset_left = 10.0
offset_top = -0.110016
offset_right = -10.0
offset_bottom = -0.110016
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dsxom")
placeholder_text = "Object name"
alignment = 1

[node name="WeightEdit" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.66
offset_left = 10.0
offset_top = 3.05176e-05
offset_right = -10.0
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dsxom")
placeholder_text = "Weight"
alignment = 1

[node name="SocketEdit_U" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.716
anchor_right = 1.0
anchor_bottom = 0.77
offset_left = 10.0
offset_top = -0.120026
offset_right = -204.0
offset_bottom = 0.0999756
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dsxom")
placeholder_text = "U"
alignment = 1

[node name="SocketEdit_D" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.716
anchor_right = 1.0
anchor_bottom = 0.77
offset_left = 108.0
offset_top = -0.120026
offset_right = -106.0
offset_bottom = 0.0999756
theme = ExtResource("1_dsxom")
placeholder_text = "D"
alignment = 1

[node name="SocketEdit_F" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.716
anchor_right = 1.0
anchor_bottom = 0.77
offset_left = 204.0
offset_top = -0.120026
offset_right = -10.0
offset_bottom = 0.0999756
theme = ExtResource("1_dsxom")
placeholder_text = "F"
alignment = 1

[node name="SocketEdit_B" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.782
anchor_right = 1.0
anchor_bottom = 0.837
offset_left = 10.0
offset_top = 0.259949
offset_right = -204.0
offset_bottom = -0.0899963
theme = ExtResource("1_dsxom")
placeholder_text = "B"
alignment = 1

[node name="SocketEdit_L" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.782
anchor_right = 1.0
anchor_bottom = 0.837
offset_left = 108.0
offset_top = 0.259949
offset_right = -106.0
offset_bottom = -0.0899963
theme = ExtResource("1_dsxom")
placeholder_text = "L"
alignment = 1

[node name="SocketEdit_R" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.782
anchor_right = 1.0
anchor_bottom = 0.837
offset_left = 204.0
offset_top = 0.259949
offset_right = -10.0
offset_bottom = -0.0899963
theme = ExtResource("1_dsxom")
placeholder_text = "R"
alignment = 1

[node name="Label" type="Label" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.67
anchor_right = 1.0
anchor_bottom = 0.716
offset_left = 120.0
offset_top = 0.0999756
offset_right = -119.0
offset_bottom = -0.120026
text = "Sockets"

[node name="FileLabel" type="Label" parent="MainMenu/Panel/TabContainer/Assets"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.858
anchor_right = 1.0
anchor_bottom = 0.904
offset_left = 10.0
offset_top = -0.0600281
offset_right = -190.0
offset_bottom = -0.280029
text = "Selected file:"
label_settings = SubResource("LabelSettings_ss86v")

[node name="FileDialog" type="FileDialog" parent="MainMenu/Panel/TabContainer/Assets"]
title = "Open a File"
initial_position = 2
size = Vector2i(732, 500)
always_on_top = true
theme = ExtResource("1_dsxom")
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.gltf")
show_hidden_files = true

[node name="AssetImporter" type="PopupPanel" parent="MainMenu/Panel/TabContainer/Assets"]
title = "Asset import"
initial_position = 2
size = Vector2i(500, 570)
visible = true
borderless = false
always_on_top = true

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 566.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer"]
layout_mode = 2

[node name="PreviewContainer" type="SubViewportContainer" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.034
anchor_right = 0.5
anchor_bottom = 0.042
offset_left = -187.5
offset_right = 187.5
offset_bottom = 225.0
grow_horizontal = 2

[node name="SubViewport" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/PreviewContainer" instance=ExtResource("4_sa1rd")]
handle_input_locally = false
size = Vector2i(400, 225)
render_target_update_mode = 4

[node name="SaveButton" type="Button" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.966
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Save"

[node name="HSplitContainer" type="HSplitContainer" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.504
anchor_right = 1.0
anchor_bottom = 0.891
offset_left = 20.0
offset_top = -30.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 0
split_offset = 250

[node name="LeftPanel" type="Panel" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer"]
layout_mode = 2

[node name="AssetNameEdit" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.06
anchor_right = 1.0
anchor_bottom = 0.06
offset_left = 10.0
offset_right = -10.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_vertical = 4
placeholder_text = "Asset name"
alignment = 1

[node name="WeightEdit" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.274
anchor_right = 1.0
anchor_bottom = 0.274
offset_left = 10.0
offset_top = -15.5
offset_right = -10.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
placeholder_text = "Weight"
alignment = 1

[node name="RightPanel" type="Panel" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Sockets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Socket_U" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 10.0
offset_top = 25.0
offset_right = -10.0
offset_bottom = 31.0
grow_horizontal = 2
placeholder_text = "U"
alignment = 1

[node name="Socket_D" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 31.0
grow_horizontal = 2
placeholder_text = "D"
alignment = 1

[node name="Socket_F" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.451
anchor_right = 1.0
anchor_bottom = 0.451
offset_left = 10.0
offset_top = -15.5
offset_right = -10.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "F"
alignment = 1

[node name="Socket_B" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.601
anchor_right = 1.0
anchor_bottom = 0.601
offset_left = 10.0
offset_top = -15.5
offset_right = -10.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "B"
alignment = 1

[node name="Socket_R" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.815
anchor_right = 1.0
anchor_bottom = 0.815
offset_left = 10.0
offset_top = -31.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "R"
alignment = 1

[node name="Socket_L" type="LineEdit" parent="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.958
anchor_right = 1.0
anchor_bottom = 0.958
offset_left = 10.0
offset_top = -31.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "L"
alignment = 1

[node name="Settings" type="Control" parent="MainMenu/Panel/TabContainer"]
visible = false
layout_mode = 2

[connection signal="pressed" from="MainMenu/Panel/TabContainer/Assets/AddButton" to="MainMenu/Panel/TabContainer/Assets" method="_on_add_button_pressed"]
[connection signal="file_selected" from="MainMenu/Panel/TabContainer/Assets/FileDialog" to="MainMenu/Panel/TabContainer/Assets" method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="MainMenu/Panel/TabContainer/Assets/AssetImporter/MarginContainer/Panel/SaveButton" to="MainMenu/Panel/TabContainer/Assets" method="_on_import_save_button_pressed"]
